Enhance qBitPuller configuration to support categories and improve torrent state handling

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -6,5 +6,7 @@ RCLONE_REMOTE="seedhost_sftp"
 RCLONE_SRC_ROOT="/home16/milouz/downloads/completed"
 DEST_ROOT="/mnt/unraid/Downloads/incoming"
 
+CATEGORIES="radarr,sonarr"
+
 PULLED_TAG="pulled"
 RCLONE_CONFIG="/root/.config/rclone/rclone.conf"
