Add QB_TIMEOUT and LOG_LEVEL to configuration and update Config class

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -1,6 +1,8 @@
 QB_URL="https://lime.seedhost.eu/milouz/qbittorrent"
 QB_USER="TON_USER_WEBUI"
 QB_PASS="TON_PASS_WEBUI"
+QB_TIMEOUT="30"
+LOG_LEVEL="INFO"
 
 RCLONE_REMOTE="seedhost_sftp"
 RCLONE_SRC_ROOT="/home16/milouz/downloads/completed"
