--- a/etc/systemd/system/qBitPuller.service
+++ b/etc/systemd/system/qBitPuller.service
@@ -5,4 +5,8 @@ Wants=network-online.target
 
 [Service]
 Type=oneshot
+EnvironmentFile=/etc/qBitPuller.env
+User=qbitpuller
+Group=media
+UMask=0002
 ExecStart=/usr/bin/python3 /usr/local/bin/qBitPuller.py
