Update environment file paths and enhance installation script for qBitPuller

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -11,4 +11,4 @@ DEST_ROOT="/mnt/unraid/Downloads/incoming"
 CATEGORIES="radarr,sonarr"
 
 PULLED_TAG="pulled"
-RCLONE_CONFIG="/root/.config/rclone/rclone.conf"
+RCLONE_CONFIG="/etc/qBitPuller/rclone.conf"
