Add Sonarr cleanup script and update environment variables

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -8,6 +8,14 @@ RCLONE_REMOTE="seedhost_sftp"
 RCLONE_SRC_ROOT="/home16/milouz/downloads/completed"
 DEST_ROOT="/mnt/unraid/media/Torrents"
 
+SONARR_URL="http://sonarr:8989"
+SONARR_API_KEY="TON_API_KEY"
+SONARR_TIMEOUT="30"
+SONARR_SUBDIR="sonarr"
+SONARR_CLEANUP_DRY_RUN="true"
+SONARR_MIN_AGE_MINUTES="60"
+SONARR_CLEANUP_EMPTY_DIRS="true"
+
 CATEGORIES="radarr,sonarr"
 
 PULLED_TAG="pulled"
