--- a/etc/systemd/system/qBitPuller.service
+++ b/etc/systemd/system/qBitPuller.service
@@ -3,6 +3,8 @@ Description=Seedbox puller (qBittorrent API + rclone)
 After=network-online.target
 Wants=network-online.target
 
+OnSuccess=qBitPuller-sonarr-cleanup.service
+
 [Service]
 Type=oneshot
 EnvironmentFile=/etc/qBitPuller/qBitPuller.env
