Add history_since_days configuration and update cleanup logic to utilize it

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -15,6 +15,7 @@ SONARR_SUBDIR="sonarr"
 SONARR_CLEANUP_DRY_RUN="true"
 SONARR_MIN_AGE_MINUTES="60"
 SONARR_CLEANUP_EMPTY_DIRS="true"
+SONARR_HISTORY_SINCE_DAYS="14"
 
 CATEGORIES="radarr,sonarr"
 
