Add Radarr cleanup functionality and update installation script

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -17,6 +17,15 @@ SONARR_MIN_AGE_MINUTES="60"
 SONARR_CLEANUP_EMPTY_DIRS="true"
 SONARR_HISTORY_SINCE_DAYS="14"
 
+RADARR_URL="http://radarr:7878"
+RADARR_API_KEY="TON_API_KEY"
+RADARR_TIMEOUT="30"
+RADARR_SUBDIR="radarr"
+RADARR_CLEANUP_DRY_RUN="true"
+RADARR_MIN_AGE_MINUTES="60"
+RADARR_CLEANUP_EMPTY_DIRS="true"
+RADARR_HISTORY_SINCE_DAYS="14"
+
 CATEGORIES="radarr,sonarr"
 
 PULLED_TAG="pulled"
