Add Lidarr cleanup functionality and update related configurations

--- a/etc/qBitPuller.env
+++ b/etc/qBitPuller.env
@@ -26,6 +26,15 @@ RADARR_MIN_AGE_MINUTES="60"
 RADARR_CLEANUP_EMPTY_DIRS="true"
 RADARR_HISTORY_SINCE_DAYS="14"
 
-CATEGORIES="radarr,sonarr"
+LIDARR_URL="http://lidarr:8686"
+LIDARR_API_KEY="TON_API_KEY"
+LIDARR_TIMEOUT="30"
+LIDARR_SUBDIR="lidarr"
+LIDARR_CLEANUP_DRY_RUN="true"
+LIDARR_MIN_AGE_MINUTES="60"
+LIDARR_CLEANUP_EMPTY_DIRS="true"
+LIDARR_HISTORY_SINCE_DAYS="14"
+
+CATEGORIES="radarr,sonarr,lidarr"
 
 PULLED_TAG="pulled"
