--- a/etc/systemd/system/qBitPuller.service
+++ b/etc/systemd/system/qBitPuller.service
@@ -3,7 +3,7 @@ Description=Seedbox puller (qBittorrent API + rclone)
 After=network-online.target
 Wants=network-online.target
 
-OnSuccess=qBitPuller-sonarr-cleanup.service qBitPuller-radarr-cleanup.service
+OnSuccess=qBitPuller-sonarr-cleanup.service qBitPuller-radarr-cleanup.service qBitPuller-lidarr-cleanup.service
 
 [Service]
 Type=oneshot
